<resources>

    <string name="app_name">CarculatorExample</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="AC">AC</string>
    <string name="dot">.</string>

    <string name="modeButtonContentDescription">dark/white</string>

    <!-- 테스트 텍스트 -->
    <string name="result">2,048</string>
    <string name="procedure">120 x 3 + 608 + 1080</string>

</resources>